<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <FrameLayout
            android:id="@+id/backdrop_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/movie_backdrop"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/movie_backdrop"
                android:src="@drawable/detail_foreground" />

        </FrameLayout>

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:padding="5dp"
            android:contentDescription="@string/title_favorite"
            android:src="@drawable/baseline_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="16dp"
            android:padding="5dp"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_layout"
            app:layout_constraintStart_toStartOf="@+id/backdrop_layout"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_layout">
            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="150dp"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/backdrop_layout"
                app:layout_constraintStart_toStartOf="@+id/backdrop_layout"
                app:layout_constraintTop_toBottomOf="@+id/backdrop_layout"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7.66"
            android:layout_margin="8dp"
            android:drawablePadding="4dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/baseline_star_rate_24"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_layout"
            app:layout_constraintStart_toEndOf="@+id/cd_poster" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7.667"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="8dp"
            android:drawablePadding="4dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/baseline_thumb_up_24"
            app:layout_constraintBottom_toBottomOf="@+id/backdrop_layout"
            app:layout_constraintStart_toEndOf="@+id/tv_vote" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="8dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cd_poster"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_layout"
            tools:text="Dune Part 2 : T3h Messiah" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cd_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            tools:text="16 - 8 - 2021" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cd_poster" />

        <ImageView
            android:id="@+id/iv_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:src="@color/white"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_overview"
            app:layout_constraintStart_toStartOf="@+id/tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"/>

        <TextView
            android:id="@+id/tv_overview_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview"
            tools:text="dasdasd ferewcd advrr asdas rgrgs greger vvgre asasd eerwefd dsfs" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>